--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+#root {
+  height: 100vh;
+  overflow: hidden;
+ 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  height: 100%;
+  overflow: hidden;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  height: 100%;
+  width: 100%;
+  background-color: whitesmoke;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Vending {
+  margin-left: 10%;
+  margin-top: 5%;
+  width: 40%;
+  height: 80%;
+  background-color: #171717;
+  padding: 2%;
+  padding-right: 10%;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+.Vending-Inner {
+  height: 95%;
+  width: 95%;
+  background-color: grey;
+  margin-right: 30%;
+  border-radius: 10px;
+ 
+}
+
+/*Interface*/
+
+.Interface {
+  height: 60%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10%;
+  position: absolute;
+  top: 20%;
+  right: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.Display {
+  border: solid black;
+  width: 100%;
+  height: 25%;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Keypad {
+  display: grid;
+  gap: 5%;
+  grid-template-columns: 30% 30% 30%;
+  width: 100%;
+  height: 100%;
 }
+
+.Key {
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+  text-align: center;
+  border: solid black;
+  font-weight: bold;
+  font-size: larger;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+}
+
+.Key:hover {
+  background-color: #171717;
+  color: whitesmoke;
+}
+
