--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -14,6 +14,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: whitesmoke;
+  color: white;
 }
 
 .Vending {
@@ -31,9 +32,9 @@ body {
 .Vending-Inner {
   height: 95%;
   width: 95%;
-  background-color: grey;
-  margin-right: 30%;
+  background-color: whitesmoke;
   border-radius: 10px;
+  padding-top: 5%;
  
 }
 
@@ -52,10 +53,45 @@ body {
 }
 
 .Display {
+  font-family:'digital-7';
+  background-color: black;
+  color: greenyellow;
   border: solid black;
   width: 100%;
-  height: 25%;
+  height: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  font-weight: bold;
+  text-align: right;
+  overflow: hidden;
+  position: relative;
+  font-size: 25px;
+  padding: 2% 0 0 0;
+  text-align: center;
+
+}
+
+.Display h3 {
+  margin-bottom: 0;
+}
+.Selection-Text-Moving {
+  position: absolute;
+  width: 150%;
+  color: greenyellow;
+  animation: Display 9s linear infinite;
+  margin: 0
+}
+
+@keyframes Display {
+  from {
+    left: 80%;
+  }
+  to {
+    left: -150%;
+  }
 }
 
 .Keypad {
@@ -64,9 +100,12 @@ body {
   grid-template-columns: 30% 30% 30%;
   width: 100%;
   height: 100%;
+  font-size: 30px;
 }
 
 .Key {
+  background-color: black;
+  color: whitesmoke;
   width: 100%;
   height: 100%;
   padding: 5%;
@@ -80,7 +119,33 @@ body {
 }
 
 .Key:hover {
-  background-color: #171717;
-  color: whitesmoke;
+  color: greenyellow;
 }
 
+/*Vending Items*/
+
+.Vending-Items {
+  display: grid;
+  gap: 5%;
+  grid-template-columns: 20% 20% 20% 20%;
+  width: 90%;
+  height: 80%;
+  font-size: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Item {
+  background-color: black;
+  color: greenyellow;
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+  text-align: center;
+  border: solid black;
+  font-weight: bold;
+  font-size: larger;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+}
