--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -58,7 +58,7 @@ body {
   color: greenyellow;
   border: solid black;
   width: 100%;
-  height: 5%;
+  height: 6%;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -68,7 +68,7 @@ body {
   text-align: right;
   overflow: hidden;
   position: relative;
-  font-size: 25px;
+  font-size: 30px;
   padding: 2% 0 0 0;
   text-align: center;
 
@@ -77,11 +77,28 @@ body {
 .Display h3 {
   margin-bottom: 0;
 }
-.Selection-Text-Moving {
+
+.Selection-Text-Moving-First {
   position: absolute;
   width: 150%;
   color: greenyellow;
+  animation: Display 9.5s linear infinite;
+  margin: 0
+}
+
+.Selection-Text-Moving-Second {
+  position: absolute;
+  width: 200%;
+  color: greenyellow;
   animation: Display 9s linear infinite;
+  margin: 0
+}
+
+.Selection-Text-Moving-Third {
+  position: absolute;
+  width: 150%;
+  color: greenyellow;
+  animation: Display 9.5s linear infinite;
   margin: 0
 }
 
@@ -90,7 +107,7 @@ body {
     left: 80%;
   }
   to {
-    left: -150%;
+    left: -180%;
   }
 }
 
