--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -57,8 +57,8 @@ body {
   background-color: black;
   color: greenyellow;
   border: solid black;
-  width: 100%;
-  height: 6%;
+  width: 350px;
+  height: 25px;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -69,7 +69,7 @@ body {
   overflow: hidden;
   position: relative;
   font-size: 30px;
-  padding: 2% 0 0 0;
+  padding: 4% 0 0 0;
   text-align: center;
 
 }
@@ -88,7 +88,7 @@ body {
 
 .Selection-Text-Moving-Second {
   position: absolute;
-  width: 200%;
+  width: 700px;
   color: greenyellow;
   animation: Display 9s linear infinite;
   margin: 0
@@ -104,10 +104,10 @@ body {
 
 @keyframes Display {
   from {
-    left: 80%;
+    left: 120%;
   }
   to {
-    left: -180%;
+    left: -200%;
   }
 }
 
@@ -115,7 +115,7 @@ body {
   display: grid;
   gap: 5%;
   grid-template-columns: 30% 30% 30%;
-  width: 100%;
+  width: 350px;
   height: 100%;
   font-size: 30px;
 }
