--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -210,7 +210,7 @@ body {
 
 .Item {
   background-color: black;
-  color: greenyellow;
+  color: whitesmoke;
   width: 100%;
   height: 100%;
   padding: 5%;
@@ -221,6 +221,10 @@ body {
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+}
+
+.Item:hover {
+  color: greenyellow
 }
 
 .ItemSelected {
