--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -94,6 +94,15 @@ body {
  
 }
 
+.Show-Items {
+  color: #171717;
+  font-size: 20px;
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  cursor: pointer;
+}
+
 /*Interface*/
 
 .Interface {
@@ -242,4 +251,21 @@ body {
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
   z-index: 2;
   position: relative;
+}
+
+.Purchased-Items {
+  height: 70%;
+  width: 20%;
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  border: solid #171717 2px;
+  background-color: whitesmoke;
+  z-index: 1;
+  border-radius: 10px;
 }
