--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -74,7 +74,7 @@ body {
 }
 
 .Vending {
-  margin-left: 10%;
+  margin-left: 3%;
   margin-top: 5%;
   width: 40%;
   height: 80%;
@@ -114,7 +114,7 @@ body {
   gap: 10%;
   position: absolute;
   top: 20%;
-  right: 10%;
+  right: 20%;
 }
 
 .Display {
@@ -257,28 +257,31 @@ body {
   display: flex;
   align-items: center;
   position: absolute;
-  width: 20%;
-  min-height: 40%;
-  right: 10%;
-  top: 10%;
-  border: solid #171717 2px;
+  top: 20%;
+  right: 3%;
+  width: 127px;
+  justify-content: center;
+  border: solid #171717 5px;
   background-color: whitesmoke;
   z-index: 1;
   border-radius: 10px;
-  padding: 2%;
+  padding: 15px;
 }
 
 .Purchased-Items-Inner {
-  margin-left: auto;
-  margin-right: auto;
   display: inline-flex;
   flex-direction: column;
   gap: 5px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  text-align: center;
 }
 
 .Image {
   margin-bottom: 5%;
   margin-top: 5%;
+  height: 100px;
+  width: 100px;
+  border: solid black 6px;
+  border-radius: 10px;
 }
