added show items button

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -255,6 +255,7 @@ body {
 
 .Purchased-Items {
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: absolute;
   top: 20%;
