--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -73,6 +73,39 @@ body {
   text-align: center;
 }
 
+.Copied-Alert{
+  height: 16px;
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.Copied-Alert h5 {
+  color: #171717;
+  margin: 0;
+}
+
+.Copy-Button {
+  background-color: whitesmoke;
+  color: #171717;
+  height: 20px;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.Address-Container {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  align-items: center;
+}
+
+/*Vending Machine*/
+
 .Vending {
   margin-left: 3%;
   margin-top: 5%;
@@ -286,3 +319,4 @@ body {
   border: solid black 6px;
   border-radius: 10px;
 }
+
