--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -16,8 +16,8 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background-color: whitesmoke;
-  color: white;
+  background-color: black;
+  color: black;
 }
 
 /*////////////////////////////////DARK MODE/////////////////////////////////////////*/
@@ -195,7 +195,7 @@ body {
   flex-direction: column;
   justify-content: center;
   border: solid greenyellow 5px;
-  border-radius: 10px;
+  border-radius: 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20%;
@@ -267,22 +267,22 @@ body {
 }
 
 .Vending-Outer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin-left: 3%;
-  margin-top: 4%;
-  margin-bottom: 5%;
-  width: 40%;
-  height: 80%;
+  margin-top: 3%;
+  width: 55%;
+  height: 90%;
   background-color: black;
-  padding: 2%;
-  padding-right: 10%;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   border: solid greenyellow 5px;
 }
 
 .Vending-Inner {
-  height: 95%;
-  width: 95%;
+  height: 85%;
+  width: 75%;
   background-color: black;
   border-radius: 10px;
   padding-top: 5%;
@@ -323,9 +323,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 5%;
-  position: absolute;
-  top: 40%;
-  right: 45.55%;
+  margin-right: 10px;
   border: solid greenyellow 2px;
   border-radius: 10px;
   padding: 20px
@@ -429,7 +427,6 @@ body {
   font-size: 30px;
   padding: 10px;
   border-radius: 10px;
-  /* border: solid greenyellow 5px; */
 }
 
 .KeypadSmall {
@@ -485,8 +482,9 @@ body {
 
 .Vending-Items {
   display: grid;
-  gap: 5%;
-  grid-template-columns: 20% 20% 20% 20%;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 25% 25% 25% 25%;
   width: 90%;
   height: 90%;
   font-size: 30px;
@@ -494,7 +492,16 @@ body {
   margin-right: auto;
 }
 
-.Item {
+
+.Item-Box {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px
+}
+
+.Item-Container {
   background-color: black;
   width: 100px;
   height: 100px;
@@ -506,14 +513,20 @@ body {
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.Item {
+  width: 100px;
+  height: 100px;
+  z-index: 0;
 }
 
 .Item:hover {
   color: greenyellow
 }
 
-.ItemSelected {
-  /* scale: 1.1; */
+.ItemSelected-Container {
   background-color: black;
   border: solid greenyellow 5px;
   color: black;
@@ -529,6 +542,38 @@ body {
   z-index: 2;
   position: relative;
 }
+
+.Item-Number {
+  border: solid greenyellow 3px;
+  background-color: black;
+  color: greenyellow;
+  border-radius: 100px;
+  height: 20px;
+  width: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 2px;
+  float: left;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
+
+.Item-Price{
+  border: solid greenyellow 3px;
+  background-color: black;
+  color: greenyellow;
+  border-radius: 100px;
+  height: 22px;
+  width: 60px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 2px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+}
+
 
 .Purchased-Items {
   display: flex;
