--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -565,6 +565,23 @@
     left: 2px;
   }
 
+  .L-ItemSelected-Number {
+    border: solid #f54029 3px;
+    background-color: #f54029;
+    color: whitesmoke;
+    border-radius: 100px;
+    height: 20px;
+    width: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    padding: 2px;
+    float: left;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+  }
+
   .L-Item-Price{
     border: solid #f54029 3px;
     background-color: whitesmoke;
