change color of selected number

--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -561,7 +561,7 @@ body {
 }
 
 .ItemSelected-Number {
-  border: solid green 3px;
+  border: solid greenyellow 3px;
   background-color: greenyellow;
   color: black;
   border-radius: 100px;
