--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -507,13 +507,14 @@ body {
   height: 100px;
   padding: 5%;
   text-align: center;
-  border: solid greenyellow;
+  border: solid greenyellow 2px;
   font-weight: bold;
   font-size: larger;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
   position: relative;
+  margin: 3px;
 }
 
 .Item {
@@ -589,6 +590,22 @@ body {
   text-align: center;
   padding: 2px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+
+.ItemSelected-Price{
+  border: solid greenyellow 3px;
+  background-color: greenyellow;
+  color: black;
+  border-radius: 100px;
+  height: 22px;
+  width: 60px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 2px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  z-index: 2;
 }
 
 
