--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -553,7 +553,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  padding: 2px;
+  padding: 2px 3px 4px 2px;
   float: left;
   position: absolute;
   top: 2px;
@@ -570,7 +570,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  padding: 2px;
+  padding: 2px 3px 4px 2px;
   float: left;
   position: absolute;
   top: 2px;
