--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -551,7 +551,7 @@
     font-size: 16px;
     font-weight: bold;
     text-align: center;
-    padding: 2px;
+    padding: 2px 3px 4px 2px;
     float: left;
     position: absolute;
     top: 2px;
@@ -568,7 +568,7 @@
     font-size: 16px;
     font-weight: bold;
     text-align: center;
-    padding: 2px;
+    padding: 2px 3px 4px 2px;
     float: left;
     position: absolute;
     top: 2px;
