--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -643,8 +643,10 @@ body {
   justify-items: center;
   grid-template-columns: 25% 25% 25% 25%;
   text-align: center;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .No-Purchased-Items {
