--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -521,7 +521,6 @@ body {
   border: solid greenyellow 3px;
   font-weight: bold;
   font-size: larger;
-  cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -684,5 +683,23 @@ body {
   font-weight: bold;
   font-size: 16px;
   cursor: pointer;
+}
+
+.Item-Upload-Label {
+  background-color: transparent;
+  color: greenyellow;
+  width: 50%;
+  height: 50%;
+  font-size: 13px;
+  cursor: pointer;
+  border-radius: 20px;
+  padding: 5px;
+  top: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25%;
 }
 
