--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -307,7 +307,7 @@ body {
   border-radius: 20px;
 }
 
-.InterfaceSmall-Container {
+.Vending-Side-Container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -315,6 +315,27 @@ body {
   gap: 20%;
   margin-right: 10px;
   margin-top: 10%;
+}
+
+.Change-Display {
+  font-family:'digital-7';
+  background-color: black;
+  color: greenyellow;
+  border: solid greenyellow 2px;
+  width: 70px;
+  height: 25px;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  font-weight: bold;
+  font-size: 25px;
+  padding: 2% 0 2% 0;
+  text-align: center;
+}
+
+.Change-Display h4 {
+  margin: 0;
+  width: 70px;;
 }
 
 .InterfaceSmall {
