--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -314,7 +314,7 @@ body {
   align-items: center;
   gap: 20%;
   margin-right: 10px;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .Change-Display {
@@ -322,20 +322,20 @@ body {
   background-color: black;
   color: greenyellow;
   border: solid greenyellow 2px;
-  width: 70px;
-  height: 25px;
-  display: flex;
+  /* width: 80px; */
+  /* height: 36px; */
+  display: inline-block;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
   font-weight: bold;
-  font-size: 25px;
-  padding: 2% 0 2% 0;
+  font-size: 35px;
+  padding: 0 4% 0 4%;
   text-align: center;
 }
 
 .Change-Display h4 {
   margin: 0;
-  width: 70px;;
+  /* width: 80px;; */
 }
 
 .InterfaceSmall {
