--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -312,20 +312,20 @@
     background-color: whitesmoke;
     color: #f54029;
     border: solid #f54029 2px;
-    width: 70px;
-    height: 25px;
+    width: 100px;
+    height: 36px;
     display: flex;
     border-radius: 10px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
     font-weight: bold;
-    font-size: 25px;
-    padding: 2% 0 2% 0;
+    font-size: 35px;
+    padding: 0 4% 0 4%;
     text-align: center;
   }
 
   .L-Change-Display h4 {
     margin: 0;
-    width: 70px;;
+    width: 100px;;
   }
   
   .L-InterfaceSmall {
